# hinlang

./: .gitignore  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  PYPI_FORM_GUIDE.md  QUICKSTART_PUBLISHING.md  README.md  TRUSTED_PUBLISHERS_GUIDE.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
examples/: basic_usage.py  batch_convert.py  custom_dictionary.py
hinlang/: __init__.py  cli.py  detector.py  dictionary.py  hindi_to_roman.py  roman_to_hindi.py
tests/: test_detector.py  test_hindi_to_roman.py  test_roman_to_hindi.py  test_roundtrip.py
